# ScriptCollection

./: .coveragerc  .gitignore  .pylintrc  2.2.3  Build.pylintrc  Contributing.md  CreatePackage.script  GenerateCoverage.bat  GitVersion.yml  InstallDevelopmentDependencies.script  License.txt  ReadMe.md  ScriptCollection.code-workspace  Setup.py  Taskfile.yml  coverage.xml  package.json  requirements.txt
ScriptCollection/: .coveragerc  Core.py  DefaultGitRunner.py  Executables.py  GeneralUtilities.py  GenericGitRunner.py  GenericProgramRunner.py  GitRunnerBase.py  Hardening.py  ProgramRunnerBase.py  ProgramRunnerEpew.py  ProgramRunnerPopen.py  ReadMe.md  ScriptCollection.codeunit  ScriptCollection.codeunit.xml  ScriptCollectionCore.py  Setup.py  UpdateCertificates.py  Utilities.py  core.py  pyproject.toml  requirements.Development.txt  requirements.txt  setup.cfg
ScriptCollection/Core/: ScriptCollectionCore.py
ScriptCollection/Core/Tests/: test_ScriptCollectionCoreTests.py
ScriptCollection/Executables/: Executables.py
ScriptCollection/Other/: .gitignore  CommonTasks.py  Hints.md  UpdateDependencies.py
ScriptCollection/Other/InternalScripts/QualityCheck/: Linting.py  RunTestcases.py
ScriptCollection/Other/QualityCheck/: Linting.py  RunTestcases.py
ScriptCollection/Other/QualityCheck/TestCoverage/: TestCoverage.xml
ScriptCollection/Other/Reference/: GenerateReference.py  docfx.json
ScriptCollection/Other/Reference/ReferenceContent/: Hints.md  ScriptCollectionReference.md  index.md
ScriptCollection/Other/Resources/Changelog/: v3.3.14.md
ScriptCollection/Other/Resources/TestCoverageHistory/: 2022-12-27_18-36-33_CoverageHistory.xml  2022-12-27_21-52-29_CoverageHistory.xml  2022-12-27_23-49-55_CoverageHistory.xml  2022-12-28_19-17-27_CoverageHistory.xml  2022-12-28_19-21-24_CoverageHistory.xml  2022-12-29_00-03-34_CoverageHistory.xml  2022-12-29_12-24-47_CoverageHistory.xml  2022-12-29_15-39-36_CoverageHistory.xml  2022-12-29_15-54-03_CoverageHistory.xml  2023-01-10_00-13-32_CoverageHistory.xml  2023-01-10_00-43-00_CoverageHistory.xml  2023-01-10_00-47-54_CoverageHistory.xml  2023-01-10_00-49-58_CoverageHistory.xml  2023-01-10_01-00-17_CoverageHistory.xml  2023-01-10_01-09-06_CoverageHistory.xml  2023-01-10_01-17-24_CoverageHistory.xml  2023-01-10_01-26-37_CoverageHistory.xml  2023-01-11_22-48-13_CoverageHistory.xml  2023-01-11_23-17-58_CoverageHistory.xml  2023-01-11_23-26-45_CoverageHistory.xml  2023-01-11_23-32-31_CoverageHistory.xml  2023-01-11_23-43-42_CoverageHistory.xml  2023-01-13_07-03-25_CoverageHistory.xml  2023-01-15_15-47-27_CoverageHistory.xml  2023-01-15_16-42-19_CoverageHistory.xml  2023-01-17_21-19-17_CoverageHistory.xml  2023-01-21_17-55-04_CoverageHistory.xml  2023-01-22_12-42-09_CoverageHistory.xml  2023-01-22_14-58-16_CoverageHistory.xml  2023-01-22_23-44-01_CoverageHistory.xml  2023-01-23_00-01-27_CoverageHistory.xml  2023-01-30_12-21-54_CoverageHistory.xml  2023-01-30_21-08-02_CoverageHistory.xml  2023-02-19_18-58-42_CoverageHistory.xml  2023-02-19_20-45-51_CoverageHistory.xml  2023-02-27_19-29-18_CoverageHistory.xml  2023-02-27_21-00-43_CoverageHistory.xml  2023-03-05_16-37-55_CoverageHistory.xml  2023-03-05_22-41-18_CoverageHistory.xml  2023-03-06_21-00-16_CoverageHistory.xml  (+428 more)
ScriptCollection/Other/TestCoverage/: TestCoverage.xml
ScriptCollection/ScriptCollection/: AnionBuildPlatform.py  CertificateUpdater.py  CultureChooser.py  Executables.py  GeneralUtilities.py  HTTPMaintenanceOverheadHelper.py  ImageUpdater.py  OCRRunner.py  OCRRunnerInformation.py  ProcessesRunner.py  ProgramRunnerBase.py  ProgramRunnerEpew.py  ProgramRunnerPopen.py  SCLog.py  ScriptCollectionCore.py  SudoRunner.py  TFCPS_CodeUnitSpecific.py  TFCPS_CodeUnitSpecific_Base.py  TFCPS_CodeUnitSpecific_Docker.py  TFCPS_CodeUnitSpecific_DotNet.py  TFCPS_CodeUnitSpecific_Flutter.py  TFCPS_CodeUnitSpecific_NodeJS.py  TFCPS_CodeUnitSpecific_Python.py  TFCPS_CodeUnit_BuildCodeUnit.py  TFCPS_CodeUnit_BuildCodeUnits.py  TFCPS_CodeUnit_Main.py  TFCPS_DoRelease1_MergeToMain.py  TFCPS_DoRelease2_MainToStable.py  TFCPS_FolderSpecific.py  TFCPS_Other.py  TFCPS_Tools.py  TFCPS_Tools_General.py  TasksForCommonProjectStructure.py  TasksForCommonProjectStructure.py.txt
ScriptCollection/ScriptCollection/OCIImages/: AbstractImageHandler.py  OCIImageManager.py
ScriptCollection/ScriptCollection/OCIImages/ConcreteImageHandlers/: ImageHandlerDebian.py  ImageHandlerDebianSlim.py  ImageHandlerGeneric.py  ImageHandlerGenericV.py
ScriptCollection/ScriptCollection/Resources/CultureChooser/: CultureChooser.js  index.html
ScriptCollection/ScriptCollection/Resources/MaintenanceSite/: MaintenanceSite.html
ScriptCollection/ScriptCollection/TFCPS/: TFCPS_CodeUnitSpecific_Base.py  TFCPS_CodeUnit_BuildCodeUnit.py  TFCPS_CodeUnit_BuildCodeUnits.py  TFCPS_CreateRelease.py  TFCPS_DoRelease1_MergeToMain.py  TFCPS_DoRelease2_MainToStable.py  TFCPS_DoRelease3_Full.py  TFCPS_Generic.py  TFCPS_MergeToMain.py  TFCPS_MergeToStable.py  TFCPS_PreBuildCodeunitsScript.py  TFCPS_Tools_General.py  TasksForCommonProjectStructure.py.txt
ScriptCollection/ScriptCollection/TFCPS/Docker/: TFCPS_CodeUnitSpecific_Docker.py
ScriptCollection/ScriptCollection/TFCPS/DotNet/: CertificateGeneratorInformationBase.py  TFCPS_CodeUnitSpecific_DotNet.py
ScriptCollection/ScriptCollection/TFCPS/Flutter/: TFCPS_CodeUnitSpecific_Flutter.py
ScriptCollection/ScriptCollection/TFCPS/Go/: TFCPS_CodeUnitSpecific_Go.py
ScriptCollection/ScriptCollection/TFCPS/NodeJS/: GenerateAPIClientBase.py  GenerateAPIClientGenerate.py  (+2 more)
ScriptCollection/ScriptCollectionTests/: test_GeneralUtilities.py  test_SCLog.py  test_ScriptCollectionCore.py  test_TFCPS_Other.py  test_TasksForCommonProjectStructure.py
ScriptCollection/Tests/: test_Core.py  test_ScriptCollectionCore.py  test_UpdateCertificates.py  test_Utilities.py
ScriptCollection/Utilities/: CertificateUpdater.py  GeneralUtilities.py  GitUtilities.py
ScriptCollection/Utilities/Tests/: test_CertificateUpdaterTests.py  test_GeneralUtilitiesTests.py  test_GitUtilities.py
Tests/: tests.py
(+589 files in other folders)
