[metadata]
name = ScriptCollection
version = 3.4.42
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = The ScriptCollection is the place for reusable scripts.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/ScriptCollection
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
keywords = package release build management
project_urls =
    Documentation = https://aniondev.github.io/ScriptCollectionReference/index.html
    Changelog = https://github.com/anionDev/ScriptCollection/tree/main/Other/Resources/Changelog

[options]
packages = ScriptCollection
zip_safe = False
include_package_data = False
python_requires = >=3.10
install_requires =
    build>=1.0.3
    coverage>=7.3.2
    cyclonedx-bom>=3.11.7
    defusedxml>=0.7.1
    keyboard>=0.13.5
    lxml>=4.9.3
    ntplib>=0.4.0
    Pillow>=10.1.0
    pycdlib>=1.14.0
    Pygments>=2.16.1
    pylint>=3.0.2
    pyOpenSSL>=23.3.0
    PyPDF2>=3.0.1
    pytest>=7.4.3
    qrcode>=7.4.2
    send2trash>=1.8.2
    twine>=4.0.2
    xmlschema>=2.5.0
[options.packages.find]
exclude = ScriptCollectionTests

[options.entry_points]
console_scripts =
    SCBuildCodeUnit = ScriptCollection.Executables:BuildCodeUnit
    SCBuildCodeUnits = ScriptCollection.Executables:BuildCodeUnits
    SCCalculateBitcoinBlockHash = ScriptCollection.Executables:CalculateBitcoinBlockHash
    SCChangeHashOfProgram = ScriptCollection.Executables:ChangeHashOfProgram
    SCCreateEmptyFileWithSpecificSize = ScriptCollection.Executables:CreateEmptyFileWithSpecificSize
    SCCreateHashOfAllFiles = ScriptCollection.Executables:CreateHashOfAllFiles
    SCCreateISOFileWithObfuscatedFiles = ScriptCollection.Executables:CreateISOFileWithObfuscatedFiles
    SCExtractPDFPages = ScriptCollection.Executables:ExtractPDFPages
    SCFilenameObfuscator = ScriptCollection.Executables:FilenameObfuscator
    SCGenerateSnkFiles = ScriptCollection.Executables:GenerateSnkFiles
    SCGenerateThumbnail = ScriptCollection.Executables:GenerateThumbnail
    SCHealthcheck = ScriptCollection.Executables:Healthcheck
    SCKeyboardDiagnosis = ScriptCollection.Executables:KeyboardDiagnosis
    SCMergePDFs = ScriptCollection.Executables:MergePDFs
    SCObfuscateFilesFolder = ScriptCollection.Executables:ObfuscateFilesFolder
    SCOrganizeLinesInFile = ScriptCollection.Executables:OrganizeLinesInFile
    SCPDFToImage = ScriptCollection.Executables:PDFToImage
    SCReplaceSubstringsInFilenames = ScriptCollection.Executables:ReplaceSubstringsInFilenames
    SCSearchInFiles = ScriptCollection.Executables:SearchInFiles
    SCCreateSimpleMergeWithoutRelease = ScriptCollection.Executables:CreateSimpleMergeWithoutRelease
    SCShow2FAAsQRCode = ScriptCollection.Executables:Show2FAAsQRCode
    SCShowMissingFiles = ScriptCollection.Executables:ShowMissingFiles
    SCUpdateNugetpackagesInCsharpProject = ScriptCollection.Executables:UpdateNugetpackagesInCsharpProject
    SCUploadFile = ScriptCollection.Executables:UploadFile
    SCGenerateCertificateAuthority = ScriptCollection.Executables:GenerateCertificateAuthority
    SCGenerateCertificate = ScriptCollection.Executables:GenerateCertificate
    SCGenerateCertificateSignRequest = ScriptCollection.Executables:GenerateCertificateSignRequest
    SCSignCertificate = ScriptCollection.Executables:SignCertificate
