[metadata]
name = ScriptCollection
version = 3.5.55
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = The ScriptCollection is the place for reusable scripts.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/ScriptCollection
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
keywords = package release build management
project_urls =
    Documentation = https://aniondev.github.io/ScriptCollectionReference/index.html
    Changelog = https://github.com/anionDev/ScriptCollection/tree/main/Other/Resources/Changelog

[options]
packages = ScriptCollection
zip_safe = False
include_package_data = False
python_requires = >=3.10
install_requires =
    build>=1.2.2.post1
    coverage>=7.6.10
    cyclonedx-bom>=5.1.2
    defusedxml>=0.7.1
    keyboard>=0.13.5
    lcov-cobertura>=2.0.2
    lxml>=5.3.0
    ntplib>=0.4.0
    Pillow>=11.1.0
    pycdlib>=1.14.0
    Pygments>=2.19.1
    pylint>=3.3.4
    pyOpenSSL>=25.0.0
    PyPDF>=5.2.0
    pytest>=8.3.4
    PyYAML>=6.0.2
    qrcode>=8.0
    send2trash>=1.8.3
    twine>=6.1.0
    xmlschema>=3.4.3
[options.packages.find]
exclude = ScriptCollectionTests

[options.entry_points]
console_scripts =
    scbuildcodeunit = ScriptCollection.Executables:BuildCodeUnit
    scbuildcodeunits = ScriptCollection.Executables:BuildCodeUnits
    scbuildcodeunitsc = ScriptCollection.Executables:BuildCodeUnitsC
    sccalculatebitcoinblockhash = ScriptCollection.Executables:CalculateBitcoinBlockHash
    sccreatechangelogentry = ScriptCollection.Executables:CreateChangelogEntry
    scchangefileextension = ScriptCollection.Executables:ChangeFileExtensions
    scchangehashofprogram = ScriptCollection.Executables:ChangeHashOfProgram
    sccreateemptyfilewithspecificsize = ScriptCollection.Executables:CreateEmptyFileWithSpecificSize
    sccreatehashofallfiles = ScriptCollection.Executables:CreateHashOfAllFiles
    sccreateisofilewithobfuscatedfiles = ScriptCollection.Executables:CreateISOFileWithObfuscatedFiles
    scextractpdfpages = ScriptCollection.Executables:ExtractPDFPages
    scfilenameobfuscator = ScriptCollection.Executables:FilenameObfuscator
    scgeneratearc42referencetemplate = ScriptCollection.Executables:GenerateARC42ReferenceTemplate
    scgeneratesnkfiles = ScriptCollection.Executables:GenerateSnkFiles
    scgeneratethumbnail = ScriptCollection.Executables:GenerateThumbnail
    schealthcheck = ScriptCollection.Executables:Healthcheck
    sckeyboarddiagnosis = ScriptCollection.Executables:KeyboardDiagnosis
    scmergepdfs = ScriptCollection.Executables:MergePDFs
    scobfuscatefilesfolder = ScriptCollection.Executables:ObfuscateFilesFolder
    scorganizelinesinfile = ScriptCollection.Executables:OrganizeLinesInFile
    scpdftoimage = ScriptCollection.Executables:PDFToImage
    screplacesubstringsinfilenames = ScriptCollection.Executables:ReplaceSubstringsInFilenames
    scsearchinfiles = ScriptCollection.Executables:SearchInFiles
    sccreatesimplemergewithoutrelease = ScriptCollection.Executables:CreateSimpleMergeWithoutRelease
    scshow2faasqrcode = ScriptCollection.Executables:Show2FAAsQRCode
    scshowmissingfiles = ScriptCollection.Executables:ShowMissingFiles
    scupdatenugetpackagesincsharpproject = ScriptCollection.Executables:UpdateNugetpackagesInCsharpProject
    scuploadfile = ScriptCollection.Executables:UploadFile
    scgeneratecertificateauthority = ScriptCollection.Executables:GenerateCertificateAuthority
    scgeneratecertificate = ScriptCollection.Executables:GenerateCertificate
    scgeneratecertificatesignrequest = ScriptCollection.Executables:GenerateCertificateSignRequest
    scsigncertificate = ScriptCollection.Executables:SignCertificate
    scfileexists=ScriptCollection.Executables:FileExists
    scfolderexists=ScriptCollection.Executables:FolderExists
    scsetcontentoffile=ScriptCollection.Executables:SetContentOfFile
    scprintfilecontent=ScriptCollection.Executables:PrintFileContent
    sccreatefile=ScriptCollection.Executables:CreateFile
    sccreatefolder=ScriptCollection.Executables:CreateFolder
    scappendlinetofile=ScriptCollection.Executables:AppendLineToFile
    scregexreplaceinfile=ScriptCollection.Executables:RegexReplaceInFile
    scprintfilesize=ScriptCollection.Executables:PrintFileSize
    scfilecontainscontent=ScriptCollection.Executables:FileContainsContent
    scremovefile=ScriptCollection.Executables:RemoveFile
    scremoveFolder=ScriptCollection.Executables:RemoveFolder
